--- a/source/index.html
+++ b/source/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
+  <link href="css/style.css" rel="stylesheet">
 </head>
 <body class="page__body">
 <header class="header">
@@ -31,7 +32,6 @@
     </div>
   </nav>
 </header>
-  
 <main class="page-main">
   <img src="img/welcome.png" width="282" height="214" alt="Welcome">
   <section class="description">
@@ -139,6 +139,6 @@
         <img src="img/footer-logo.png" alt="htmlacademy" width="27" height="34">
       </a>
     </div>
-  </footer>
+</footer>
 </body>
 </html>
