--- a/source/index.html
+++ b/source/index.html
@@ -4,141 +4,146 @@
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
   <link href="css/style.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body class="page__body">
-<header class="header">
-  <a class="header__logo">
-    <img src="img/logo.png" width="102" height="84" alt="Логотип">
-  </a>
-  <nav class="main-nav">
-    <div class="main-nav__wrapper">
+<div class="wrapper">
+  <header class="header">
+    <a class="header__logo">
+      <img src="img/logo.png" width="102" height="84" alt="Логотип">
+    </a>
+    <nav class="main-nav">
       <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span>
         <!--Здесь будет SVG иконка-->
       </button>
-      <ul class="main-nav__list site-list">
-        <li class="site-list__item">
-          <a href="home.html">Главная</a>
+      <div class="main-nav__wrapper">
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item">
+            <a href="home.html">Главная</a>
+          </li>
+          <li class="site-list__item">
+            <a href="blank.html">Фото и видео</a>
+          </li>
+          <li class="site-list__item">
+            <a href="reviews.html">Форма отзывы</a>
+          </li>
+          <li class="site-list__item">
+            <a href="htmlacademy.html">HTML Academy</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+  <main class="page-main">
+    <img src="img/welcome.png" width="282" height="214" alt="Welcome">
+    <section class="description">
+      <div class="description__wrapper">
+        <h1 class="description__slogan">СЕДОНА - НЕБОЛЬШОЙ ГОРОДОК В АРИЗОНЕ, ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО</h1>
+        <p class="description__text">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+      </div>
+    </section>
+
+    <section class="advantages">
+      <div class="advantages__wrapper advantages__wrapper--left">
+        <article class="advantages__item advantages-item advantages-item--blue">
+          <h3 class="advantages-item__title">НАСТОЯЩИЙ ГОРОДОК</h3>
+          <span class="advantages-item__number">№1</span>
+          <p class="advantages-item__text">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
+        </article>
+        <img class="advantages__item__img" src="img/city.jpg" width="520" height="260" alt="Домик с садом">
+      </div>
+
+      <div class="advantages__wrapper feature">
+        <ul class="feature__list">
+          <li class="feature__item">
+            <h3 class="feature-item__title">ЖИЛЬЁ</h3>
+            <p class="feature-item__description">Жильё Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+          </li>
+          <li class="feature__item">
+            <h3 class="feature-item__title">СУВЕНИРЫ</h3>
+            <p class="feature-item__description">Сувениры Не только китайского, но и местного производства!</p>
+          </li>
+          <li class="feature__item">
+            <h3 class="feature-item__title">ЕДА</h3>
+            <p class="feature-item__description">Еда Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+          </li>
+        </ul>
+      </div>
+
+      <div class="advantages__wrapper advantages__wrapper--right">
+        <article class="advantages__item advantages-item advantages-item--blue">
+          <h3 class="advantages-item__title">ТАМ ЕСТЬ МОСТ ДЬЯВОЛА</h3>
+          <span class="advantages-item__number">№2</span>
+          <p class="advantages-item__text">ДА, ПО НЕМУ МОЖНО ПРОЙТИ! ЕСЛИ КОНЕЧНО ВЫ ОСМЕЛИТЕСЬ</p>
+        </article>
+        <img class="advantages__item__img" src="img/canyon.jpg" width="520" height="260" alt="Домик с садом">
+      </div>
+
+      <div class="advantages__wrapper advantages__wrapper">
+        <article class="advantages__item advantages-item">
+          <h3 class="advantages-item__title">НЕБОЛЬШАЯ ПЛОЩАДЬ</h3>
+          <span class="advantages-item__number">№3</span>
+          <p class="advantages-item__text">ВСЕ ДОСТОПРИМЕЧАТЕЛЬНОСТИ НАХОДЯТСЯ ОЧЕНЬ БЛИЗКО</p>
+        </article>
+
+        <article class="advantages__item advantages-item">
+          <h3 class="advantages-item__title">КРАСИВАЯ ДОРОГА</h3>
+          <span class="advantages-item__number">№4</span>
+          <p class="advantages-item__text">ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА СОВСЕМ НЕ СКУЧНО!</p>
+        </article>
+
+        <article class="advantages__item advantages-item">
+          <h3 class="advantages-item__title">МАЛО ТУРИСТОВ</h3>
+          <span class="advantages-item__number">№5</span>
+          <p class="advantages-item__text">ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА СОВСЕМ НЕ СКУЧНО!</p>
+        </article>
+      </div>
+    </section>
+
+    <section class="interest">
+      <div class="interest__wrapper">
+        <div class="interest__offer">
+          <h2 class="interest__title">ЗАИНТЕРЕСОВАЛИСЬ?</h2>
+          <p class="interest__text">УКАЖИТЕ ПРЕДПОЛАГАЕМЫЕ ДАТЫ ПОЕЗДКИ, <br>
+            и мы ПОКАЖЕМ ВАМ ЛУЧШИЕ ПРЕДЛОЖЕНИЯ ГОСТИНИЦ В СЕДОНЕ</p>
+        </div>
+        <div class="interest__button">
+          <a class="btn-search" href="#">Найти гостиницу</a>
+        </div>
+      </div>
+
+      <iframe class="interest__map-iframe"></iframe> <!--Потом вставлю код-->
+      <img class="interest__map-image" src="https://via.placeholder.com/150x150" width="150" height="150"
+           alt="Седона. Аризона">
+    </section>
+  </main>
+
+  <footer class="footer">
+    <div class="footer__wrapper">
+      <div class="footer__contacts">
+        <a class="footer__link" href="https://htmlacademy.ru">#VISITSEDONA</a>
+      </div>
+
+      <ul class="social footer__social">
+        <li class="social__item">
+          <a href="#" class="social__link"></a>
         </li>
-        <li class="site-list__item">
-          <a href="blank.html">Фото и видео</a>
+        <li class="social__item">
+          <a href="#" class="social__link"></a>
         </li>
-        <li class="site-list__item">
-          <a href="reviews.html">Форма отзывы</a>
-        </li>
-        <li class="site-list__item">
-          <a href="htmlacademy.html">HTML Academy</a>
+        <li class="social__item">
+          <a href="#" class="social__link"></a>
         </li>
       </ul>
-    </div>
-  </nav>
-</header>
-<main class="page-main">
-  <img src="img/welcome.png" width="282" height="214" alt="Welcome">
-  <section class="description">
-    <div class="description__wrapper">
-      <h1 class="description__slogan">СЕДОНА - НЕБОЛЬШОЙ ГОРОДОК В АРИЗОНЕ, ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО</h1>
-      <p class="description__text">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
-    </div>
-  </section>
 
-  <section class="advantages">
-    <div class="advantages__wrapper">
-      <article class="advantages__item advantages-item advantages-item--blue">
-        <h3 class="advantages-item__title">НАСТОЯЩИЙ ГОРОДОК</h3>
-        <span class="advantages-item__number">№1</span>
-        <p class="advantages-item__text">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
-      </article>
-      <img src="img/city.jpg" width="520" height="260" alt="Домик с садом">
-    </div>
-
-    <div class="advantages__wrapper feature">
-      <ul class="feature__list">
-        <li class="feature__item">
-          <h3 class="feature-item__title">ЖИЛЬЁ</h3>
-          <p class="feature-item__description">Жильё Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-        </li>
-        <li class="feature__item">
-          <h3 class="feature-item__title">СУВЕНИРЫ</h3>
-          <p class="feature-item__description">Сувениры Не только китайского, но и местного производства!</p>
-        </li>
-        <li class="feature__item">
-          <h3 class="feature-item__title">ЕДА</h3>
-          <p class="feature-item__description">Еда Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-        </li>
-      </ul>
-    </div>
-
-    <div class="advantages__wrapper">
-      <article class="advantages__item advantages-item advantages-item--blue">
-        <h3 class="advantages-item__title">ТАМ ЕСТЬ МОСТ ДЬЯВОЛА</h3>
-        <span class="advantages-item__number">№2</span>
-        <p class="advantages-item__text">ДА, ПО НЕМУ МОЖНО ПРОЙТИ! ЕСЛИ КОНЕЧНО ВЫ ОСМЕЛИТЕСЬ</p>
-      </article>
-      <img src="img/canyon.jpg" width="520" height="260" alt="Домик с садом">
-    </div>
-
-    <div class="advantages__wrapper">
-      <article class="advantages__item advantages-item">
-        <h3 class="advantages-item__title">НЕБОЛЬШАЯ ПЛОЩАДЬ</h3>
-        <span class="advantages-item__number">№3</span>
-        <p class="advantages-item__text">ВСЕ ДОСТОПРИМЕЧАТЕЛЬНОСТИ НАХОДЯТСЯ ОЧЕНЬ БЛИЗКО</p>
-      </article>
-
-      <article class="advantages__item advantages-item">
-        <h3 class="advantages-item__title">КРАСИВАЯ ДОРОГА</h3>
-        <span class="advantages-item__number">№4</span>
-        <p class="advantages-item__text">ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА СОВСЕМ НЕ СКУЧНО!</p>
-      </article>
-
-      <article class="advantages__item advantages-item">
-        <h3 class="advantages-item__title">МАЛО ТУРИСТОВ</h3>
-        <span class="advantages-item__number">№5</span>
-        <p class="advantages-item__text">ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА СОВСЕМ НЕ СКУЧНО!</p>
-      </article>
-    </div>
-  </section>
-
-  <section class="interest">
-    <div class="interest__wrapper">
-      <div class="interest__offer">
-        <h2 class="interest__title">ЗАИНТЕРЕСОВАЛИСЬ?</h2>
-        <p class="interest__text">УКАЖИТЕ ПРЕДПОЛАГАЕМЫЕ ДАТЫ ПОЕЗДКИ, <br>
-          и мы ПОКАЖЕМ ВАМ ЛУЧШИЕ ПРЕДЛОЖЕНИЯ ГОСТИНИЦ В СЕДОНЕ</p>
-      </div>
-      <div class="interest__button">
-        <a class="btn-search" href="#">Найти гостиницу</a>
+      <div class="footer__copyright">
+        <span class="copyright__text">Разработано</span>
+        <a class="copyright__link" href="https://htmlacademy.ru/study">
+          <img src="img/footer-logo.png" alt="htmlacademy" width="27" height="34">
+        </a>
       </div>
     </div>
-
-    <iframe class="interest__map-iframe"></iframe> <!--Потом вставлю код-->
-    <img class="interest__map-image" src="https://via.placeholder.com/150x150" width="150" height="150" alt="Седона. Аризона">
-  </section>
-</main>
-
-<footer class="footer">
-  <div class="footer__wrapper">
-    <div class="footer__contacts">
-      <a class="footer__link" href="https://htmlacademy.ru">#VISITSEDONA</a>
-    </div>
-
-    <ul class="social footer__social">
-      <li class="social__item">
-        <a href="#" class="social__link"></a>
-      </li>
-      <li class="social__item">
-        <a href="#" class="social__link"></a>
-      </li>
-      <li class="social__item">
-        <a href="#" class="social__link"></a>
-      </li>
-    </ul>
-
-    <div class="footer__copyright">
-      <span class="copyright__text">Разработано</span>
-      <a class="copyright__link" href="https://htmlacademy.ru/study">
-        <img src="img/footer-logo.png" alt="htmlacademy" width="27" height="34">
-      </a>
-    </div>
-</footer>
+  </footer>
+</div>
 </body>
 </html>
