--- a/source/form.html
+++ b/source/form.html
@@ -19,7 +19,7 @@
         <li class="site-list__item">
           <a href="home.html">Главная</a>
         </li>
-        <li class="site-list__item">
+        <li class="site-list__item site-list__item--offset">
           <a href="blank.html">Фото и видео</a>
         </li>
         <li class="site-list__item">
@@ -33,8 +33,10 @@
   </nav>
 </header>
 
-<main class="page-main">
+<main class="page-form-main">
+    <div class="welcome">
   <img alt="Welcome" height="214" src="img/welcome.png" width="282">
+</div>
 
   <section class="reviews__title reviews">
     <div class="reviews__wrapper">
@@ -44,84 +46,85 @@
     </div>
   </section>
 
-  <form class="page-form">
-    <fieldset class="sign">
-      <legend class="sign__title">Представьтесь:</legend>
-      <form action="https://echo.htmlacademy.ru" class="sign__form" method="post">
-        <div class="sign__item">
-          <label for="sign__name">Имя*</label>
-          <input id="sign__name" name="name" placeholder="Петр" type="text">
+
+    <form class="page-form">
+      <fieldset class="sign">
+        <legend class="sign__title">Представьтесь:</legend>
+        <form action="https://echo.htmlacademy.ru" class="sign__form" method="post">
+          <div class="sign__item">
+            <label for="sign__name">Имя*</label>
+            <input id="sign__name" name="name" placeholder="Петр" type="text">
+          </div>
+          <div class="sign__item">
+            <label for="sign__family">Фамилия*</label>
+            <input id="sign__family" name="family" placeholder="Иванов" type="text">
+          </div>
+          <div class="sign__item">
+            <label for="sign__middle">Отчество*</label>
+            <input id="sign__middle" name="middle" placeholder="Александрович" type="text">
+          </div>
+        </form>
+      </fieldset>
+
+      <fieldset class="contacts-info">
+        <legend class="contacts-info__title">Контактная информация:</legend>
+        <div class="contacts-info__item">
+          <label for="contacts-info__phone">Контактный телефон*</label>
+          <input id="contacts-info__phone" name="phone" placeholder="Введите телефон" type="text">
         </div>
-        <div class="sign__item">
-          <label for="sign__family">Фамилия*</label>
-          <input id="sign__family" name="family" placeholder="Иванов" type="text">
+        <div class="contacts-info__item">
+          <label for="contacts-info__email">Электронная почта*</label>
+          <input id="contacts-info__email" name="e-mail" placeholder="Введите e-mail" type="text">
         </div>
-        <div class="sign__item">
-          <label for="sign__middle">Отчество*</label>
-          <input id="sign__middle" name="middle" placeholder="Александрович" type="text">
-        </div>
-      </form>
-    </fieldset>
+      </fieldset>
 
-    <fieldset class="contacts-info">
-      <legend class="contacts-info__title">Контактная информация:</legend>
-      <div class="contacts-info__item">
-        <label for="contacts-info__phone">Контактный телефон*</label>
-        <input id="contacts-info__phone" name="phone" placeholder="Введите телефон" type="text">
-      </div>
-      <div class="contacts-info__item">
-        <label for="contacts-info__email">Электронная почта*</label>
-        <input id="contacts-info__email" name="e-mail" placeholder="Введите e-mail" type="text">
-      </div>
-    </fieldset>
+      <fieldset class="filter-impression">
+        <legend class="filter-impression__title">Ваше общее впечатление:</legend>
+        <ul class="filter-impression__list">
+          <li class="filter-impression__option">
+            <input checked class="filter-impression__emotions" id="filter-shave" name="emotion" type="radio" value="positive">
+            <label class="filter-impression__positive">Скорее положительное</label>
+          </li>
+          <li class="filter-impression__option">
+            <input class="filter-impression__emotions" id="filter-care" name="emotion" type="radio" value="negative">
+            <label class="filter-impression__negative">Скорее отрицательное</label>
+          </li>
+          <li class="filter-impression__option">
+            <input class="filter-impression__emotions" id="filter-accessories" name="emotion" type="radio" value="average">
+            <label class="filter-impression__average">Затрудняюсь ответить</label>
+          </li>
+        </ul>
+      </fieldset>
 
-    <fieldset class="filter-impression">
-      <legend class="filter-impression__title">Ваше общее впечатление:</legend>
-      <ul class="filter-impression__list">
-        <li class="filter-impression__option">
-          <input checked class="filter-impression__emotions" id="filter-shave" name="emotion" type="radio" value="positive">
-          <label class="filter-impression__positive">Скорее положительное</label>
-        </li>
-        <li class="filter-impression__option">
-          <input class="filter-impression__emotions" id="filter-care" name="emotion" type="radio" value="negative">
-          <label class="filter-impression__negative">Скорее отрицательное</label>
-        </li>
-        <li class="filter-impression__option">
-          <input class="filter-impression__emotions" id="filter-accessories" name="emotion" type="radio" value="average">
-          <label class="filter-impression__average">Затрудняюсь ответить</label>
-        </li>
-      </ul>
-    </fieldset>
+      <fieldset class="filter-attractions">
+        <legend class="filter-attractions__title">Посещенные достопримечательности:</legend>
+        <input checked id="devil" type="checkbox">
+        <label for="devil">
+          Мост Дьявола
+        </label>
+        <input checked id="mountain" type="checkbox">
+        <label for="mountain">
+          Гора-Колокол
+        </label>
+        <input checked id="park" type="checkbox">
+        <label for="park">
+          Слайд-парк
+        </label>
+        <input id="rocks" type="checkbox">
+        <label for="rocks">
+          Красные скалы
+        </label>
+      </fieldset>
 
-    <fieldset class="filter-attractions">
-      <legend class="filter-attractions__title">Посещенные достопримечательности:</legend>
-      <input checked id="devil" type="checkbox">
-      <label for="devil">
-        Мост Дьявола
-      </label>
-      <input checked id="mountain" type="checkbox">
-      <label for="mountain">
-        Гора-Колокол
-      </label>
-      <input checked id="park" type="checkbox">
-      <label for="park">
-        Слайд-парк
-      </label>
-      <input id="rocks" type="checkbox">
-      <label for="rocks">
-        Красные скалы
-      </label>
+      <fieldset class="emotion-form">
+        <legend class="emotion-form__title">Опишите свои эмоции:</legend>
+        <textarea name="emotion-form__text">Опишите подробно все свои восторги</textarea>
+        <button type="submit">Отправить отзыв</button>
+        <p class="emotion-form__field">* — обязательные поля</p>
+      </fieldset>
+    </form>
     </fieldset>
-
-    <fieldset class="emotion-form">
-      <legend class="emotion-form__title">Опишите свои эмоции:</legend>
-      <textarea name="emotion-form__text">Опишите подробно все свои восторги</textarea>
-      <button type="submit">Отправить отзыв</button>
-    </fieldset>
-  </form>
-  </fieldset>
-
-  </form>
+    </form>
 </main>
 
 <footer class="footer">
