--- a/source/form.html
+++ b/source/form.html
@@ -2,55 +2,55 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>HTML Academy: Седона</title>
   <link href="css/style.css" rel="stylesheet">
 </head>
 <body class="page__body">
-<header class="header">
-  <a class="header__logo">
-    <img src="img/logo.png" width="102" height="84" alt="Логотип">
-  </a>
-  <nav class="main-nav">
-    <div class="main-nav__wrapper">
-      <button class="main-nav__toggle" type="button">
-        <!--Здесь будет SVG иконка-->
-      </button>
-      <ul class="main-nav__list site-list">
-        <li class="site-list__item">
-          <a href="home.html">Главная</a>
-        </li>
-        <li class="site-list__item site-list__item--offset">
-          <a href="blank.html">Фото и видео</a>
-        </li>
-        <li class="site-list__item">
-          <a href="reviews.html">Форма отзывы</a>
-        </li>
-        <li class="site-list__item">
-          <a href="htmlacademy.html">HTML Academy</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-</header>
+<div class="wrapper">
+  <header class="header">
+    <a class="header__logo">
+      <img src="img/logo.png" width="102" height="84" alt="Логотип">
+    </a>
+    <nav class="main-nav">
+      <div class="main-nav__wrapper">
+        <button class="main-nav__toggle" type="button">
+          <!--Здесь будет SVG иконка-->
+        </button>
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item">
+            <a href="home.html">Главная</a>
+          </li>
+          <li class="site-list__item site-list__item--offset">
+            <a href="blank.html">Фото и видео</a>
+          </li>
+          <li class="site-list__item">
+            <a href="reviews.html">Форма отзывы</a>
+          </li>
+          <li class="site-list__item">
+            <a href="htmlacademy.html">HTML Academy</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
 
-<main class="page-form-main">
+  <main class="page-form-main">
     <div class="welcome">
-  <img alt="Welcome" height="214" src="img/welcome.png" width="282">
-</div>
-
-  <section class="reviews__title reviews">
-    <div class="reviews__wrapper">
-      <h2 class="reviews__slogan">Оставьте свой отзыв</h2>
-      <p class="reviews__text">Помогите нашим отелям стать лучше!Оставьте отзыв о них, а также о
-        посещенных вам достопримечательностях</p>
+      <img alt="Welcome" height="214" src="img/welcome.png" width="282">
     </div>
-  </section>
+
+    <section class="reviews__title reviews">
+      <div class="reviews__wrapper">
+        <h2 class="reviews__slogan">Оставьте свой отзыв</h2>
+        <p class="reviews__text">Помогите нашим отелям стать лучше!Оставьте отзыв о них, а также о
+          посещенных вам достопримечательностях</p>
+      </div>
+    </section>
 
 
     <form class="page-form">
       <fieldset class="sign">
         <legend class="sign__title">Представьтесь:</legend>
-        <form action="https://echo.htmlacademy.ru" class="sign__form" method="post">
           <div class="sign__item">
             <label for="sign__name">Имя*</label>
             <input id="sign__name" name="name" placeholder="Петр" type="text">
@@ -63,7 +63,6 @@
             <label for="sign__middle">Отчество*</label>
             <input id="sign__middle" name="middle" placeholder="Александрович" type="text">
           </div>
-        </form>
       </fieldset>
 
       <fieldset class="contacts-info">
@@ -123,54 +122,51 @@
         <p class="emotion-form__field">* — обязательные поля</p>
       </fieldset>
     </form>
-    </fieldset>
-    </form>
-</main>
+  </main>
 
-<footer class="footer">
-  <div class="footer__wrapper">
-    <div class="footer__contacts">
-      <a class="footer__link" href="https://htmlacademy.ru">#VISITSEDONA</a>
+  <footer class="footer">
+    <div class="footer__wrapper">
+      <div class="footer__contacts">
+        <a class="footer__link" href="https://htmlacademy.ru">#VISITSEDONA</a>
+      </div>
+
+      <ul class="social footer__social">
+        <li class="social__item">
+          <a href="#" class="social__link"></a>
+        </li>
+        <li class="social__item">
+          <a href="#" class="social__link"></a>
+        </li>
+        <li class="social__item">
+          <a href="#" class="social__link"></a>
+        </li>
+      </ul>
+
+      <div class="footer__copyright">
+        <span class="copyright__text">Разработано</span>
+        <a class="copyright__link" href="https://htmlacademy.ru/study">
+          <img src="img/footer-logo.png" alt="htmlacademy" width="27" height="34">
+        </a>
+      </div>
     </div>
-
-    <ul class="social footer__social">
-      <li class="social__item">
-        <a href="#" class="social__link"></a>
-      </li>
-      <li class="social__item">
-        <a href="#" class="social__link"></a>
-      </li>
-      <li class="social__item">
-        <a href="#" class="social__link"></a>
-      </li>
-    </ul>
-
-    <div class="footer__copyright">
-      <span class="copyright__text">Разработано</span>
-      <a class="copyright__link" href="https://htmlacademy.ru/study">
-        <img src="img/footer-logo.png" alt="htmlacademy" width="27" height="34">
-      </a>
+  </footer>
+  <section class="modal-window-hidden">
+    <div class="modal-window-hidden__wrapper">
+      <h2 class="modal-window-hidden__title">Что-то пошло не так!</h2>
+      <p class="modal-window-hidden__text">Проверьте поля, выделенные красным, скорее всего вы
+        забыли их заполнить</p>
+      <button class="modal-window-hidden__button">ок</button>
     </div>
-  </div>
-</footer>
+  </section>
 
-<section class="failure-modal-window-hidden">
-  <div class="failure-modal-window-hidden__wrapper">
-    <h2 class="failure-modal-window-hidden__title">Что-то пошло не так!</h2>
-    <p class="failure-modal-window-hidden__text">Проверьте поля, выделенные красным, скорее всего вы
-      забыли их заполнить</p>
-    <button class="failure-modal-window-hidden__button">ок</button>
-  </div>
-</section>
-
-<section class="success-modal-window-hidden">
-  <div class="success-modal-window-hidden__wrapper">
-    <h2 class="success-modal-window-hidden__title">Ваш отзыв отправлен!</h2>
-    <p class="success-modal-window-hidden__text">Спасибо за ваше участие, ваш отзыв уже поступил к нам.
-      В ближайшее время мы опубликуем его на сайте.</p>
-    <button class="success-modal-window-hidden__button">Закрыть окно</button>
-  </div>
-</section>
-
+  <section class="modal-window-hidden success">
+    <div class="success__wrapper">
+      <h2 class="success__title">Ваш отзыв отправлен!</h2>
+      <p class="success__text">Спасибо за ваше участие, ваш отзыв уже поступил к нам.
+        В ближайшее время мы опубликуем его на сайте.</p>
+      <button class="success__button">Закрыть окно</button>
+    </div>
+  </section>
+</div>
 </body>
 </html>
