--- a/15/form.html
+++ b/15/form.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Седона</title>
   <link href="css/style.css" rel="stylesheet">
   <base href="https://htmlacademy-adaptive.github.io/261703-sedona-21/15/">
